# wine-nine-standalone

./: .gitignore  .travis.yml  LICENSE  README.rst  bootstrap.sh  meson.build  meson_options.txt  release.sh
.github/workflows/: G9_exp.yml  build.yml
common/: compiler.h  debug.c  debug.h  library.c  library.h  meson.build  registry.c  registry.h
d3d9-nine/: Makefile.in  backend.c  backend.h  d3d9-nine-forwarder.spec  d3d9.spec  d3d9_main.c  d3dadapter9.c  d3dadapter9.h  device_wrap.c  device_wrap.h  dri2.c  dri2.h  dri3.c  dri3.h  meson.build  present.c  present.h  shader_validator.c  shader_validator.h  version.rc  wndproc.c  wndproc.h  xcb_present.c  xcb_present.h
ninewinecfg/: Makefile.in  main.c  meson.build  ninewinecfg.manifest  ninewinecfg.rc  resource.h
ninewinecfg/nls/: cze.rc  deu.rc  eng.rc  fra.rc  hu.rc  hun.rc  jpn.rc  por.rc
packaging/SPECS/: wine-nine-unstable.spec  wine-nine.spec
tools/: .gitignore  cross-wine32  cross-wine32.in  cross-wine64  cross-wine64.in  get_version.sh  nine-install.sh  pkg-config-nine32  pkg-config-nine64
